hint should always use space to avoid jumping elements

--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -403,6 +403,7 @@ input[type=checkbox]:checked+span:before {
 }
 #rules_hint {
     color: #0d8000;
+    height: 18px;
 }
 .rules_head {
     margin-top: 5px;
